# units_engine

./: .gitignore  .tool-versions  Cargo.toml  Dockerfile  Makefile  README.md  rust-toolchain.toml  todos.md
.github/actions/load-env/: action.yml
.github/actions/setup/: action.yml
.github/config/: env.yml
.github/workflows/: docker-build-push.yml  pull-request-main-ci.yml  task-build-madara.yml  task-build-units-engine.yml  task-lint-cargo.yml  task-lint-code-style.yml  task-test-coverage.yml
crates/db/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: main.rs
crates/engine/src/cli/: madara.rs  mod.rs  rpc.rs  telemetery.rs
crates/engine/src/service/rpc/: metrics.rs  middleware.rs  mod.rs  rpc_version.rs  server.rs
crates/handlers/: Cargo.toml
crates/handlers/common/: Cargo.toml
crates/handlers/common/src/: call.rs  chain_id.rs  declare_class.rs  declare_program.rs  deploy_account.rs  get_chain_id.rs  get_class.rs  get_nonce.rs  get_program.rs  get_transaction_receipt.rs  invoke_transaction.rs  lib.rs  nonce.rs  send_transaction.rs  transaction_receipt.rs
crates/handlers/common/src/declare_class/: mod.rs
crates/handlers/common/src/get_class/: mod.rs
crates/handlers/common/src/get_class/test_contracts/src/: lib.cairo
crates/handlers/common/src/invoke_transaction/: mod.rs
crates/handlers/common/src/nonce/: mod.rs
crates/handlers/common/src/nonce/test_contracts/src/: lib.cairo
crates/handlers/common/src/transaction_receipt/: mod.rs
crates/handlers/common/src/transaction_receipt/test_contracts/: Scarb.toml
crates/handlers/common/src/transaction_receipt/test_contracts/src/: without_can_read_event.cairo
crates/handlers/src/: chain_id.rs  deploy_account.rs  lib.rs  nonce.rs  transaction_receipt.rs
crates/handlers/src/declare_class/: mod.rs
crates/handlers/src/declare_class/test_contracts/src/: empty.cairo
crates/handlers/src/get_class/: mod.rs
crates/handlers/src/get_class/test_contracts/src/: declare_acl.cairo  empty.cairo
crates/handlers/src/invoke_transaction/: mod.rs
crates/handlers/src/invoke_transaction/test_contracts/src/: hello_world.cairo
crates/handlers/src/nonce/: mod.rs
crates/handlers/src/nonce/test_contracts/: Scarb.toml
crates/handlers/src/nonce/test_contracts/src/: with_can_read_nonce_false.cairo  with_can_read_nonce_only_owner.cairo  without_can_read_nonce.cairo
crates/handlers/src/transaction_receipt/: mod.rs
crates/handlers/src/transaction_receipt/test_contracts/: Scarb.toml
crates/handlers/src/transaction_receipt/test_contracts/src/: with_can_read_event.cairo  without_can_read_event.cairo
crates/handlers/starknet/: Cargo.toml
crates/handlers/starknet/src/: lib.rs  utils.rs
crates/handlers/starknet/src/tests/: chain_id.rs  deploy_account.rs  get_chain_id.rs  mod.rs
crates/handlers/starknet/src/tests/call/: mod.rs
crates/handlers/starknet/src/tests/call/test_contracts/: HelloWorldContract.cairo
crates/handlers/starknet/src/tests/call/test_contracts/src/: counter.cairo  lib.cairo  read_with_approval.cairo
crates/handlers/starknet/src/tests/declare_class/: mod.rs
crates/handlers/starknet/src/tests/declare_program/: mod.rs
crates/handlers/starknet/src/tests/get_class/: mod.rs
crates/handlers/starknet/src/tests/get_nonce/: mod.rs
crates/handlers/starknet/src/tests/get_program/: mod.rs
crates/handlers/starknet/src/tests/get_program/test_contracts/src/: declare_acl.cairo
crates/handlers/starknet/src/tests/get_transaction_receipt/: mod.rs
crates/handlers/starknet/src/tests/get_transaction_receipt/test_contracts/src/: with_can_read_event.cairo
crates/handlers/starknet/src/tests/invoke_transaction/: mod.rs
crates/handlers/starknet/src/tests/nonce/: mod.rs
crates/handlers/starknet/src/tests/read_data/: mod.rs
crates/handlers/starknet/src/tests/read_data/test_contracts/src/: lib.cairo
crates/handlers/starknet/src/tests/send_transaction/: mod.rs
crates/handlers/starknet/src/tests/transaction_receipt/: mod.rs
crates/handlers/starknet/src/tests/transaction_receipt/test_contracts/src/: lib.cairo
crates/handlers/starknet/src/tests/utils/: madara.rs  mod.rs  scarb.rs  starknet.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: context.rs  lib.rs  read_data.rs  rpc.rs  types.rs
crates/primitives/src/test_contracts/: Scarb.toml
crates/primitives/src/test_contracts/src/: onchain_id_mock.cairo
crates/proc-macros/: Cargo.toml  ORIGINAL_AUTHORS.md
crates/proc-macros/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
crates/rpc/src/starknet/: errors.rs  mod.rs
crates/rpc/src/starknet/v0_7_1/: api.rs  mod.rs
crates/rpc/src/starknet/v0_7_1/methods/read/: lib.rs
crates/rpc/src/starknet/v0_7_1/methods/trace/: lib.rs
crates/rpc/src/starknet/v0_7_1/methods/write/: lib.rs
crates/rpc/src/units/: errors.rs  mod.rs
crates/rpc/src/units/v0_1_0/: api.rs
crates/rpc/src/units/v0_1_0/methods/read/: lib.rs
crates/rpc/src/units/v0_1_0/methods/write/: lib.rs
crates/telemetery/: Cargo.toml
crates/telemetery/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: context.rs  lib.rs  service.rs  starknet.rs  url.rs
docs/: class_acls.md  event_acls.md  getting_started.md  nonce_class_hash_acls.md  rpc.md
e2e-starknet-tests/src/: chain_id.rs  lib.rs
e2e-tests/: Cargo.toml
e2e-tests/src/: chain_id.rs  deploy_account.rs  devnet.rs  lib.rs
e2e-tests/src/utils/: mod.rs  starknet.rs
js-scripts/: .env  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
js-scripts/src/: account.ts  provider.ts
js-scripts/src/scripts/: call.ts  chain_id.ts  declare_program.ts  deploy_account.ts  deploy_program.ts  (+2 more)
taplo/: README.md
test-utils/: Cargo.toml
test-utils/src/: lib.rs  madara.rs  port.rs  scarb.rs  starknet.rs  units.rs  workspace.rs
units-package/: README.md  package.json
units-package/src/: index.ts
units-sdk/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
units-sdk/examples/: cli.ts
units-sdk/src/: account.ts  index.ts  init_units.ts  provider.ts
units_specs/: units_api_openrpc.json
(+31 files in other folders)
