[workspace.package]
name = "units_engine"
homepage = "https://finternetlab.io/"
edition = "2021"
authors = ["Karnot <https://github.com/karnotxyz>"]
repository = "https://github.com/karnotxyz/units_engine"
version = "0.1.0"
license = "Apache-2.0"


[workspace.metadata.attribution]
includes-code-from = [
    "madara (Apache-2.0/MIT) - https://github.com/madara-alliance/madara"
]

[workspace]
members = [
  "crates/engine",
  "crates/rpc",
  "crates/db",
  "crates/handlers",
  "crates/telemetery",
  "crates/utils",
  "crates/proc-macros",
  "e2e-tests",
  "test-utils"
]
resolver = "2"
default-members = [
  "crates/engine",
  "crates/rpc",
  "crates/db",
  "crates/handlers",
  "crates/telemetery",
  "crates/utils",
  "crates/proc-macros"
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
print_stdout = "warn"
print_stderr = "warn"
# todo: uncomment these & fix them
# unwrap_used = "warn"
# missing_docs = "warn"


[workspace.dependencies]
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "signal"]}
clap = { version = "4.5.32", features = ["derive", "env"] }
anyhow = "1.0"
url = { version = "2.4", features = ["serde"] }
jsonrpsee = { version = "0.22", default-features = false, features = [
  "server",
  "client",
] }
async-trait = "0.1"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
hyper = { version = "0.14.12", features = ["server", "full"] }
hyper-tls = "0.6"
hyper-util = "0.1.9"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["cors"] }
thiserror = "2.0"
starknet = "0.13.0"
reqwest = "0.12"
uuid = { version = "1.16", features = ["v4"] }
once_cell = "1.21"

# Members
units-telemetery = { path = "crates/telemetery" }
units-utils = { path = "crates/utils" }
units-handlers = { path = "crates/handlers" }
units-rpc = { path = "crates/rpc" }
units-db = { path = "crates/db" }
units-proc-macros = { path = "crates/proc-macros" }
units-tests-utils = { path = "test-utils" }

# Macros
indoc = "2"
proc-macro2 = "1.0.86"
quote = "1.0.26"
syn = { version = "2.0.39", features = ["full"] }

# Instrumentation
opentelemetry = { version = "0.25.0", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio", "logs"] }
opentelemetry-stdout = { version = "0.25.0" }
opentelemetry-otlp = { version = "0.25.0", features = [
  "tonic",
  "metrics",
  "logs",
] }
opentelemetry-semantic-conventions = { version = "0.25.0" }
opentelemetry-appender-tracing = { version = "0.25.0", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-core = { version = "0.1.32", default-features = false }
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
  "std",
] }
tracing-test = "0.2.5"
tracing-opentelemetry = "0.26.0"

# Tests
rstest = "0.25"
assert_matches = "1.5"