[package]
name = "units-e2e-tests"
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
tokio.workspace = true
once_cell.workspace = true
starknet.workspace = true
url.workspace = true
uuid.workspace = true
units-tests-utils.workspace = true
rstest.workspace = true
units-utils.workspace = true

[lints]
workspace = true
