[package]
name = "units-e2e-tests"
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
reqwest.workspace = true
rstest.workspace = true
starknet.workspace = true
tokio.workspace = true
units-tests-utils.workspace = true
units-utils.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
