[package]
name = "units-tests-utils"
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
tokio.workspace = true
once_cell.workspace = true
starknet.workspace = true
url.workspace = true
uuid.workspace = true
serde_json.workspace = true
units-utils.workspace = true
rstest.workspace = true
units-primitives.workspace = true

[lints]
workspace = true
