[package]
name = "units-tests-utils"
homepage.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
reqwest.workspace = true
rstest.workspace = true
serde_json.workspace = true
tokio.workspace = true
units-handlers-common.workspace = true
units-primitives.workspace = true
units-utils.workspace = true
url.workspace = true
uuid.workspace = true
