[package]
name = "units-engine"
description = "Units Engine"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[[bin]]
name = "units_engine"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
hyper.workspace = true
jsonrpsee.workspace = true
opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
units-rpc.workspace = true
units-telemetery.workspace = true
units-utils.workspace = true
url.workspace = true

[features]
testing = ["units-rpc/testing"]
