[package]
name = "units-handlers"
description = "Units Handlers"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[dependencies]
units-utils.workspace = true
anyhow.workspace = true
starknet.workspace = true
tokio.workspace = true
units-tests-utils.workspace = true
thiserror.workspace = true