[package]
name = "units-handlers"
description = "Units Handlers"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[dependencies]
units-utils.workspace = true
anyhow.workspace = true
starknet.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde_json.workspace = true
units-primitives = { workspace = true }

[dev-dependencies]
rstest.workspace = true
units-tests-utils.workspace = true
assert_matches.workspace = true

[features]
testing = ["units-primitives/testing"]