[package]
name = "units-handlers"
description = "Units Handlers"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
tokio.workspace = true
units-primitives = { workspace = true }
units-utils.workspace = true
hex.workspace = true

[dev-dependencies]
rstest.workspace = true
units-tests-utils.workspace = true
assert_matches.workspace = true

[features]
testing = ["units-primitives/testing"]
