[package]
name = "units-primitives"
description = "Units Primitives"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[dependencies]
starknet.workspace = true
starknet-crypto.workspace = true
units-utils.workspace = true
thiserror.workspace = true
hex.workspace = true
anyhow.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true }
units-tests-utils.workspace = true
assert_matches.workspace = true

[features]
testing = []
