[package]
name = "units-primitives"
description = "Units Primitives"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hex.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet-crypto.workspace = true
thiserror.workspace = true
units-utils.workspace = true
starknet = { workspace = true, optional = true }

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true }
units-tests-utils.workspace = true
assert_matches.workspace = true

[features]
testing = ["starknet"]
