[package]
name = "units-rpc"
description = "Units RPC"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.attribution]
includes-code-from = [
  "madara (Apache-2.0/MIT) - https://github.com/madara-alliance/madara",
]

[dependencies]
anyhow.workspace = true
jsonrpsee = { workspace = true, default-features = true, features = [
  "macros",
  "server",
] }
serde_json.workspace = true
starknet.workspace = true
thiserror.workspace = true
units-handlers.workspace = true
units-proc-macros.workspace = true
units-utils.workspace = true

[features]
testing = ["units-handlers/testing"]
