[package]
name = "units-telemetery"
description = "Units Telemetery"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[dependencies]
tracing.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-core.workspace = true
tracing-opentelemetry.workspace = true
url.workspace = true
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
console = "0.15"
