[package]
name = "units-utils"
description = "Units Utils"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
starknet.workspace = true
tokio = { workspace = true, features = [
  "sync",
  "time",
  "rt-multi-thread",
  "macros",
] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
rstest.workspace = true
units-tests-utils.workspace = true
